<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/WorksActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WorksActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radioGroupSearch"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnSearch">

        <RadioButton
            android:id="@+id/radioButtonOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/open" />

        <RadioButton
            android:id="@+id/radioButtonClosed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/closed" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:gravity="center_vertical"
        android:text="@string/search" />
</RelativeLayout>

    <ListView
        android:id="@+id/listWorks"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="6dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>